--- a/src/style.css
+++ b/src/style.css
@@ -90,7 +90,7 @@ html,body {
   background: url("../images/p1_lantern.png") no-repeat center bottom;
   background-size: 100%;
   position: absolute;
-  top:-3.4%;
+  top:0;
   right: 0;
   left: 0;
   margin: auto;
