--- a/src/style.css
+++ b/src/style.css
@@ -107,7 +107,7 @@ html,body {
 }
 #page1 > .p1_lantern:before {
   position: absolute;
-  top:-3.4%;
+  top:0;
   right:0;
   bottom: 0;
   left: 0;
@@ -145,6 +145,7 @@ html,body {
     opacity: 1;
      }
 }
+
 #page1 > .p1_i {
   position: absolute;
   right:0;
@@ -345,7 +346,7 @@ html,body {
   left: 0;
   margin: 0 auto;
   background: url(../images/p3_title.png) no-repeat center center;
-  background-size: 80%;
+  background-size: 70%;
 }
 #page3 >.p3_second{
   width: 22.8125vw;
@@ -397,4 +398,15 @@ html,body {
     -webkit-transform:rotate(360deg) ;
       transform: rotate(360deg);
      }
+  }
+  @media all and (max-height:480px){
+    #page1 > .p1_lantern {
+      padding-top: 23vh;
+    }
+    #page1 > .p1_lantern:before {
+      top:-15.4%;
+    }
+    #page1 > .p1_i {
+      height: 20.63vh;
+    }
   }
