--- a/src/style.css
+++ b/src/style.css
@@ -107,10 +107,10 @@ html,body {
 }
 #page1 > .p1_lantern:before {
   position: absolute;
-  top:0;
+  
   right:0;
-  bottom: 0;
   left: 0;
+  bottom: 1%;
   z-index: 1;
   content: "";
   border-radius: 50%;
