--- a/src/style.css
+++ b/src/style.css
@@ -87,7 +87,7 @@ html,body {
   background-size: 100%;
 }
 #page1 > .p1_lantern {
-  background: url("../images/p1_lantern.png") no-repeat center bottom;
+  background: url("../images/p1_lantern1.png") no-repeat center bottom;
   background-size: 100%;
   position: absolute;
   top:-3.4%;
@@ -100,18 +100,16 @@ html,body {
   padding-top: 31vh;
   text-align: center;
   -webkit-box-sizing: border-box;
-    -moz-box-sizing: border-box;
-      -ms-box-sizing: border-box;
-        -o-box-sizing: border-box;
   box-sizing: border-box;
 }
 #page1 > .p1_lantern:before {
   position: absolute;
   right:0;
   left: 0;
-  bottom: 1%;
+  bottom: 0;
+  top:0;
   z-index: 1;
-  content: "";
+  content: " ";
   border-radius: 50%;
   margin: auto;
   width: 30vw;
